--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "threax-npm-tk",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "author": "Andrew Piper",
   "private": false,
   "files": [
     "copy.js"
   ],
   "dependencies": {
-    "copy": "^0.3.0",
-    "del": "~2.2.2",
+    "fs-extra": "^2.1.2",
     "jsns": "^2.0.2"
   },
   "devDependencies": {
