--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "threax-npm-tk",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "author": "Andrew Piper",
   "private": false,
   "files": [
     "copy.js",
-    "less.js"
+    "less.js",
+    "tsc.js"
   ],
   "dependencies": {
     "fs-extra": "^2.1.2",
