--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "threax-npm-tk",
-  "version": "0.0.8",
+  "version": "0.1.0",
   "author": "Andrew Piper",
   "private": false,
   "files": [
     "copy.js",
     "less.js",
-    "tsc.js"
+    "tsc.js",
+    "externalPromise.js"
   ],
   "dependencies": {
     "fs-extra": "^2.1.2",
