Added less dependency

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "threax-npm-tk",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "author": "Andrew Piper",
   "private": false,
   "files": [
@@ -12,7 +12,8 @@
   ],
   "dependencies": {
     "fs-extra": "^2.1.2",
-    "jsns": "^2.0.2"
+    "jsns": "^2.0.2",
+    "less": "^2.7.2"
   },
   "devDependencies": {
     
