--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "fs-extra": "^2.1.2",
     "jsns": "^2.0.2",
     "less": "^2.7.2",
-    "glob": "^7.1.1"
+    "glob": "^7.1.1",
+    "@types/es6-promise": "^0.0.32",
+    "@types/node":"^6.0.69"
   },
   "devDependencies": {
     
