--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "threax-npm-tk",
-  "version": "3.0.3",
+  "version": "3.0.4",
   "author": "Andrew Piper",
   "private": false,
   "dependencies": {
@@ -9,9 +9,7 @@
     "less": "^2.7.2",
     "glob": "^7.1.1",
     "@types/es6-promise": "^0.0.32",
-    "@types/node":"^6.0.69"
+    "@types/node": "^6.0.69"
   },
-  "devDependencies": {
-    
-  }
+  "devDependencies": {}
 }
