--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "threax-npm-tk",
-  "version": "3.3.1",
+  "version": "3.4.0",
   "author": "Andrew Piper",
   "private": false,
   "dependencies": {
@@ -11,5 +11,6 @@
     "@types/es6-promise": "^0.0.32",
     "@types/node": "^6.0.69"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "bin": "./bin/threax-npm-tk"
 }
