--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "threax-npm-tk",
-  "version": "4.0.0",
+  "version": "4.0.1",
   "author": "Andrew Piper",
   "private": false,
   "dependencies": {
-    "fs-extra": "^2.1.2",
-    "jsns": "^4.1.0",
-    "less": "^2.7.2",
-    "glob": "^7.1.1",
     "@types/es6-promise": "^0.0.32",
-    "@types/node": "^6.0.69"
+    "@types/node": "^6.0.69",
+    "fs-extra": "^2.1.2",
+    "glob": "^7.1.1",
+    "jsns": "^4.1.0",
+    "less": "^2.7.2"
   },
   "devDependencies": {},
   "bin": "./bin/threax-npm-tk"
