--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "fs-extra": "^2.1.2",
     "glob": "^7.1.1",
     "jsns": "^4.1.0",
-    "less": "^2.7.2"
+    "less": "^2.7.2",
+    "node-sass": "^4.9.1"
   },
   "devDependencies": {},
   "bin": "./bin/threax-npm-tk"
