--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "threax-npm-tk",
-  "version": "5.4.0",
+  "version": "5.4.0-pre.0",
   "author": "Andrew Piper",
   "private": false,
   "dependencies": {
