--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "author": "Andrew Piper",
   "private": false,
   "dependencies": {
-    "@types/node": "^6.14.6",
-    "fs-extra": "^7.0.1",
+    "fs-extra": "^8.0.1",
     "glob": "^7.1.3",
     "jsns": "^5.0.0",
     "less": "^3.9.0",
-    "node-sass": "^4.11.0"
+    "node-sass": "^4.12.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/node": ">=12.0.2"
+  },
   "bin": "./bin/threax-npm-tk"
 }
