--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "threax-npm-tk",
-  "version": "5.6.1",
+  "version": "5.7.0",
   "author": "Andrew Piper",
   "private": false,
   "dependencies": {
@@ -8,7 +8,8 @@
     "glob": "^7.1.6",
     "jsns": "^5.0.0",
     "less": "^3.11.3",
-    "node-sass": "^4.14.1"
+    "node-sass": "^4.14.1",
+    "terser": "^4.8.0"
   },
   "devDependencies": {
     "@types/node": ">=14.0.14"
